# VideoDecoder

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  GEMINI.md  LICENSE  README.md  vcpkg.json
.githooks/: pre-commit
benchmarks/: CMakeLists.txt  main.cpp
cli/: CMakeLists.txt  main.cpp
cmake/: CompilerFlags.cmake
docs/: architecture.md  features.md
filters/: CMakeLists.txt  VideoFilters.cpp  VideoFilters.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  VideoWidget.cpp  VideoWidget.h  VideoWorker.cpp  VideoWorker.h  main.cpp
lib/: AlignedMemoryPool.h  AsyncDecoderRunner.h  CMakeLists.txt  DecoderFactory.cpp  DecoderFactory.h  DecoderTypes.h  FFmpegDecoder.cpp  FFmpegDecoder.h  GStreamerDecoder.cpp  GStreamerDecoder.h  IVideoDecoder.h  SPSCQueue.h  Visibility.h
tests/: AlignedMemoryPoolTest.cpp  CMakeLists.txt  DecoderTests.cpp  SPSCQueueTest.cpp
